jwt: register, authenticate, and authenticated test endpoint with JWT token in header works with postman